--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="main.css">
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>David Randal Ray Jr.</title>
 	</head>
 	<body>
 		<nav>
@@ -15,14 +15,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm David Ray!</h1>
+				<p> I like a lot of things and this is my Github Home<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:davidray9289@gmail.com">email</a></li>
+        		<li><a href="https://github.com/dr9289">github.com/dr9289</a></li>
 			</ul>
 		</footer>
 	</body>
