--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm David Ray!</h1>
-				<p> I like a lot of things and this is my Github Home<a href="/about">Read more about my life...</a></p>
+				<p> I like a lot of things and this is my Github Home <br/><a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
