--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="dr9289.github.io">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/resume">Resume</a></li>
+        		
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm David Ray!</h1>
-				<p> I like a lot of things and this is my Github Home <br/><a href="/about">Read more about my life...</a></p>
+				<p> I like a lot of things and this is my Github Home <br/><br/><a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
