--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="dr9289.github.io">Home</a></li>
+        		<li><a href="/index">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/resume">Resume</a></li>
         		
