--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
+			<li><a href="https://dr9289.github.io">Github Portfolio (You are HERE!)</a></li>
         		<li><a href="mailto:davidray9289@gmail.com">email</a></li>
         		<li><a href="https://github.com/dr9289">github.com/dr9289</a></li>
 			</ul>
