--- a/about.html
+++ b/about.html
@@ -1,1 +1,10 @@
-This is about me
+<nav>
+    		<ul>
+        		<li><a href="/index">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/resume">Resume</a></li>
+        		
+    		</ul>
+</nav>
+
+<h1>This is about me</h1>
