--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,10 @@
-this is my resume
+<nav>
+    		<ul>
+        		<li><a href="/index">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/resume">Resume</a></li>
+        		
+    		</ul>
+</nav>
+
+<h1>this is my resume</h1>
