--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,11 @@
-<nav>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="main.css">
+		<title>David Randal Ray Jr.</title>
+	</head>
+<body>
+	<nav>
     		<ul>
         		<li><a href="/index">Home</a></li>
 	        	<li><a href="/about">About</a></li>
@@ -8,3 +15,6 @@
 </nav>
 
 <h1>this is my resume</h1>
+</body>
+</html>
+
