--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,7 @@
         		
     		</ul>
 </nav>
-
-<h1>this is my resume</h1>
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vRWZnU5B2C9QEIJwjktQGe6eCCtHhRa66jZ0loW5b4b7nRg4HQvjIsHHCi-d3-f7FubhjoPlP-ePBC5/pub?embedded=true" scrolling="no" width="900" height="1600"></iframe>
 </body>
 </html>
 
