--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 <body>
 	<nav>
     		<ul>
-        		<li><a href="/index">Home</a></li>
+        		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/resume">Resume</a></li>
         		
