--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="main.css">
-		<title>David Randal Ray Jr.</title>
-	</head>
-<body>
-	<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/portfolio">Portfolio</a></li>
-        		<li><a href="/resume">Resume</a></li>
-        		
-    		</ul>
-</nav>
+<link rel="stylesheet" type="text/css" href="main.css">
+<title>David Randal Ray Jr.</title>
 
-</body>
-</html>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/portfolio">Portfolio</a></li>
+      <li><a href="/resume">Resume</a></li>
+
+    </ul>
+  </nav>
+
+  <ul>
+
+    <li><a href="https://dr9289.github.io/Broadway-Design/ ">Broadway Design</a></li>
+    <input id="toggle" type="checkbox" checked>
+    <label for="toggle">About This Project</label>
+    <div id="expand">
+      <section>
+        <p>This is about the above section. THis is the paragraph text which i will have used the whole page blah blah </p>
+      </section>
+    </div>
+    <section>
+      <li><a href="/portfolio">Portfolio</a></li>
+
+      <li><a href="/resume">Resume</a></li>
