--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <ul>
 
     <li><a href="https://dr9289.github.io/Broadway-Design/ ">Broadway Design</a></li>
-    <input id="toggle" type="checkbox" checked>
+    <input id="toggle" type="checkbox" unchecked>
     <label for="toggle">About This Project</label>
     <div id="expand">
       <section>
