--- a/portfolio.html
+++ b/portfolio.html
@@ -4,32 +4,30 @@
 
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a>
-            </li>
-            <li><a href="/portfolio">Portfolio</a>
-            </li>
-            <li><a href="/resume">Resume</a>
-            </li>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a>
+      </li>
+      <li><a href="/portfolio">Portfolio</a>
+      </li>
+      <li><a href="/resume">Resume</a>
+      </li>
 
-        </ul>
-    </nav>
+    </ul>
+  </nav>
+  <ul>
+  
+ 
+   <li><a href="https://dr9289.github.io/Broadway-Design/ ">Broadway Design</a>
+      </li>
+  <input class="toggle-box" id="broadway" type="checkbox">
+  <label for="broadway">Click here to read more about Broadway Design!</label>
+  <div>Broadway - is a language for web page markup.</div>
 
-    <ul id="projects">
-
-        <li><a href="https://dr9289.github.io/Broadway-Design/ ">Broadway Design</a>
-        </li>
-        <input id="toggle" type="checkbox" unchecked>
-        <label for="toggle">About This Project</label>
-        <div id="expand">
-            <section>
-                <p>This is about the above section. THis is the paragraph text which i will have used the whole page blah blah </p>
-            </section>
-        </div>
-        <section>
-            <li><a href="/portfolio">Portfolio</a>
-            </li>
-
-            <li><a href="/resume">Resume</a>
-            </li>
+<li><a href="https://dr9289.github.io/TeaCozy/ ">Tea Cozy</a>
+      </li>
+  <input class="toggle-box" id="teacozy" type="checkbox">
+  <label for="teacozy">Click here to read more about Tea Cozy!</label>
+  <div>Tea Cozy - is a language for web page markup.</div>
+  
+ </ul>
