--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
   <ul>
   
  
-   <li><a href="https://dr9289.github.io/Broadway-Design/ ">Broadway Design</a>
-      </li>
+   <li>Broadway Design</li>
   <input class="toggle-box" id="broadway" type="checkbox">
   <label for="broadway">Click here to read more about Broadway Design!</label>
-  <div>Broadway - is a language for web page markup.</div>
+  <div>Broadway Design- <a href="https://dr9289.github.io/Broadway-Design/">Click here to explore the site.</a>
+    </div>
 
 <li><a href="https://dr9289.github.io/TeaCozy/ ">Tea Cozy</a>
       </li>
