--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
    <li>Broadway Design</li>
   <input class="toggle-box" id="broadway" type="checkbox">
   <label for="broadway">Click here to read more about Broadway Design!</label>
-  <div>Broadway Design- <a href="https://dr9289.github.io/Broadway-Design/">Click here to explore the site.</a>
+  <div>Broadway Design- <a href="https://dr9289.github.io/Broadway-Design/" target="blank">Click here to explore the site.</a>
     </div>
 
 <li><a href="https://dr9289.github.io/TeaCozy/ ">Tea Cozy</a>
