new colors and profile pic

--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="main.css">
-		<title>David Randal Ray Jr.</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/portfolio">Portfolio</a></li>
-        		<li><a href="/resume">Resume</a></li>
-        		
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm David Ray!</h1>
-				<p> I like a lot of things and this is my Github Home <br/><br/><a href="/resume">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-			<li><a href="https://dr9289.github.io" title="You are here">Github Portfolio</a></li>
-        		<li><a href="mailto:davidray9289@gmail.com">email</a></li>
-        		<li><a href="https://github.com/dr9289">github.com/dr9289</a></li>
-			</ul>
-		</footer>
-	</body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>David Randal Ray Jr.</title>
+</head>
+
+<body>
+    <nav>
+        <img src="/images/david.png">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/resume">Resume</a></li>
+
+        </ul>
+    </nav>
+    <main class="container">
+        <section class="blurb">
+
+            <h1>Hi there, I'm David Ray!</h1>
+            <p> I like a lot of things and this is my Github Home <br /><br /><a href="/resume">Read more about my
+					life...</a></p>
+        </section>
+
+        </div>
+
+        <footer>
+            <ul>
+                <li><a href="https://dr9289.github.io" title="You are here">Github Portfolio</a></li>
+                <li><a href="mailto:davidray9289@gmail.com">email</a></li>
+                <li><a href="https://github.com/dr9289">github.com/dr9289</a></li>
+            </ul>
+        </footer>
+    </main>
+</body>
+
 </html>
