--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <img src="/images/david.png">
         <ul>
+		<li><img src="/images/david.png"></li>
             <li><a href="/">Home</a></li>
             <li><a href="/portfolio">Portfolio</a></li>
             <li><a href="/resume">Resume</a></li>
