--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,7 +6,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/html/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/html/portfolio.html">Portfolio</a></li>
             <li><a href="/html/resume.html">Resume</a></li>
 
