--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="nav">
         <img src="/images/david.png">
         <ul class="mainmenu">
-            <li><a href="/html/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/html/portfolio.html">Portfolio</a></li>
             <li><a href="/html/resume.html">Resume</a></li>
 
