--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
         <section class="blurb ">
 
             <h1>Hi there, I'm David Ray!</h1>
-            <p> I like a lot of things and this is my Github Home <br /><br /><a href="/html/resume.html">Read more about my
-					life...</a></p>
+            <p> I like a lot of things and this is my Github Home </p>
+            <a href="/html/resume.html">Read more about my professional experience</a>
         </section>
 
         </div>
 
-        <footer>
-            <ul>
-                <li><a href="https://dr9289.github.io " title="You are here ">Github Portfolio</a></li>
-                <li><a href="mailto:davidray9289@gmail.com ">email</a></li>
-                <li><a href="https://github.com/dr9289 ">github.com/dr9289</a></li>
-            </ul>
-        </footer>
+
     </main>
 </body>
+<footer>
+    <ul>
+        <li><a href="https://dr9289.github.io " title="You are here ">Github Portfolio</a></li>
+        <li><a href="mailto:davidray9289@gmail.com ">email</a></li>
+        <li><a href="https://github.com/dr9289 ">github.com/dr9289</a></li>
+    </ul>
+</footer>
 
 </html>
